# s2gos-generator

./: .gitignore  README.md  defaults.yaml  mkdocs.yml  pyproject.toml
docs/: about.md  index.md
examples/: example_usage.py  example_usage_eradiate.py  run_from_yaml.py  simple_scene_generation.py
src/s2gos_generator/: __init__.py  _version.py  defaults.yaml
src/s2gos_generator/assets/: __init__.py  atmosphere.py  base_processor.py  datautil.py  dem.py  landcover.py  mesh.py  texture.py
src/s2gos_generator/core/: __init__.py  assets.py  config.py  exceptions.py  paths.py  pipeline.py
src/s2gos_generator/data/: dem_index.feather  landcover_index.feather  materials.json
src/s2gos_generator/data/spectra/: spectrum_baresoil_high.nc  spectrum_baresoil_low.nc  spectrum_brick.nc  spectrum_builtup_diffuse.nc  spectrum_concrete.nc  spectrum_cropland_diffuse.nc  spectrum_cropland_foliage_shrubbery.nc  spectrum_cropland_foliage_trees.nc  spectrum_cropland_foliage_uniform.nc  spectrum_cropland_soil_clay.nc  spectrum_cropland_soil_loam.nc  spectrum_grassland_foliage_dry.nc  spectrum_grassland_foliage_high.nc  spectrum_grassland_foliage_short.nc  spectrum_grassland_rpv_dry.nc  spectrum_grassland_rpv_high.nc  spectrum_grassland_rpv_short.nc  spectrum_grassland_soil_s1.nc  spectrum_grassland_soil_s2.nc  spectrum_gravel_road.nc  spectrum_moss.nc  spectrum_ocean_coastal.nc  spectrum_ocean_open.nc  spectrum_paving_asphalt.nc  spectrum_reference_rpv_bright.nc  spectrum_reference_rpv_dark.nc  spectrum_reference_rpv_grey.nc  spectrum_roofing_tile.nc  spectrum_shrubland_diffuse.nc  spectrum_shrubland_foliage.nc  spectrum_shrubland_soil.nc  spectrum_snow.nc  spectrum_tapwater_diffuse.nc  spectrum_treecover_foliage_high.nc  spectrum_treecover_foliage_low.nc  spectrum_treecover_foliage_medium.nc  spectrum_treecover_soil.nc  spectrum_water_diffuse_sixsv_mbita.nc  spectrum_water_ior.nc
src/s2gos_generator/materials/: __init__.py  brdf.py  definitions.py  loader.py  registry.py
src/s2gos_generator/scene/: __init__.py  config.py  description.py  materials.py  pipeline.py
src/s2gos_generator/scene_loading/: __init__.py  config.py  loader.py
src/s2gos_generator/simulation/: __init__.py  atmosphere.py  config.py  loader.py
src/s2gos_generator/utils/: __init__.py  geometry.py
